--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,9 @@
 language: ruby
-cache: bundler
+sudo: false
 rvm:
-  - 2.1.1
-  - 2.0.0
+  - 2.2
+  - 2.1
+  - 2.0
 notifications:
   email:
     on_success: change
